# university-buyerreview

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  needsPHI.py  phiParser.py  pyproject.toml
LLM_Extraction/: app.py  check.py  display_docs_parser.py  general_check_pipeline.py  general_check_validate.py  general_doc_parser.py  prompts.py  sspr.py  sspr_check_pipeline.py  utils.py
Langraph_MAS/: main.ipynb  main.py  model_registry.py  prompts.py
Paralled_MAS/: agents.py  checklist.py  doc_parser.py  main.ipynb  main.py  model_registry.py  pc_map_interface.py  prompt_loader.py  state.py  tools.py  union_job_utils.py  utils.py
Paralled_MAS/Agents/: checklist.py  data_sec_classification.py  doc_parser.py  pc_llm_mapping.py  pc_vector_mapping.py  phi_agreement_checker.py  summarize.py  union_job_classifier.py  validation.py
Paralled_MAS/Graphs/: data_sec_only.py  full_pipeline.py  pc_classifier_only.py  phi_agreement.py  union_job_only.py
Paralled_MAS/Parser_Prompts/: Conflict of interest(EVRD).txt  EVRD_Form.txt  Fallback_Summary.txt  (+4 more)
cdk/: README.md  app.py  build_and_push_docker.sh  cdk.json  deploy.sh  document_processing_stack copy.py  document_processing_stack.py  requirements.txt  test_deployment.py
classify_IT_PO/: app.py  bedrock_utils.py
config/: processing_limits.py
extract_info_from_doc/: app.py  bedrock_utils.py  config1.json  extract_from_doc.py  parsing_utils.py  pdftojson.py
pc_buyer_review_new/: PC_Buyer_Assignments - Copy(Buyer Review).csv  embeddings.py  pc_map_interface.py  requirements.txt  uniquePC.py  vectorSearch.py
(+60 files in other folders)
